--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.2"
+    "next": "14.2.2",
+    "@tabler/icons-react": "^2.30.0"
   },
   "devDependencies": {
     "typescript": "^5",
